tests/errors/backend/ranges/undefined.fpcore
; --range-analysis interval
(FPCore (x)
 :pre (< -1 x 1)
 (sqrt x))
